--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ section {
         justify-items: end;
     }
     section {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: 1fr 1fr;
     }
     .menu-toggle {
         display: flex;
